Crash when apply subsurface modiffier in weight mode #65505

Closed
opened 2019-06-05 01:50:24 +02:00 by Robert Zhang · 8 comments
Member

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 00:52, hash: c13e10a740
Worked: (optional)

Short description of error
Crash when apply subsurface modiffier in weight mode

Exact steps for others to reproduce the error

  1. Add a UV sphere, add subsurface modifier to 2 level.
  2. Enter weight mode. draw something or not.
  3. Apply subsurface modifier, crash~~~
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 00:52, hash: `c13e10a740` Worked: (optional) **Short description of error** Crash when apply subsurface modiffier in weight mode **Exact steps for others to reproduce the error** 1. Add a UV sphere, add subsurface modifier to 2 level. 2. Enter weight mode. draw something or not. 3. Apply subsurface modifier, crash~~~
Author
Member

Added subscriber: @zhanghua

Added subscriber: @zhanghua
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

That does not relate to the subsurface modifier. The crash can be reproduced with other generate-modifiers as well.

That does not relate to the subsurface modifier. The crash can be reproduced with other generate-modifiers as well.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Seems to go wrong when updating the normals during the release of the sculpt/paint bvh. There were recently some changes there for sculpting. Will bisect to see when this started.

Revision that introduced the issue is {f87bba0368ea3d0b71559cfae662ae9e3b39ad6f}

Seems to go wrong when updating the normals during the release of the sculpt/paint bvh. There were recently some changes there for sculpting. Will bisect to see when this started. Revision that introduced the issue is {f87bba0368ea3d0b71559cfae662ae9e3b39ad6f}
Member

It seems like it wants to update normals in a case when bvh->mpoly and bvh->mloop are not correct. vertex indexes they point to have indexes of USHORT_MAX and UINT_MAX.

The data seems to be correct, but gets incorrect along the way...

It seems like it wants to update normals in a case when `bvh->mpoly` and `bvh->mloop` are not correct. vertex indexes they point to have indexes of `USHORT_MAX` and `UINT_MAX`. The data seems to be correct, but gets incorrect along the way...
Jeroen Bakker self-assigned this 2019-06-06 14:47:50 +02:00

This issue was referenced by 6c5ef42549

This issue was referenced by 6c5ef4254981c899f6916da15a7b9a7af2e8310d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65505
No description provided.