Fix T65505: crash applying modifiers in paint and sculpt modes

We need to find a better solution for mixing normal refreshes in some corner
cases. We actually had similar issues in 2.79 anyway, not crashing is more
important.